hphp/hack/test/typecheck/shape/shape_put_no_nested_intersection.php
<?hh

function test(shape('x' => shape('y' => string)) $shape): shape('x' => shape('y' => string, 'z' => string)) {
  return Shapes::put($shape, 'x', shape('z' => 'test'));
}
